--- a/New Website/style.css
+++ b/New Website/style.css
@@ -28,3 +28,39 @@
 .item:hover{
     color: blueviolet;
 }
+.bannerimg{
+    width: 300px;
+}
+.banner-container{
+display: flex;
+justify-content: space-around;
+height: 100vh;
+color: white;
+/* border: 2px solid gray; */
+align-items: center;
+background-image: url("/images/background.png"),
+linear-gradient(45deg,rgba(8, 8, 8),rgba(53, 53, 53));
+background-position: center;
+
+
+}
+.title{
+    font-size: 55px;
+    font-weight: bold;
+}
+.description{
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.btn{
+    padding: 10px 20px;background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px
+   
+}
+.btn:hover{
+    color: blue;
+    cursor: pointer;
+}
