--- a/style.css
+++ b/style.css
@@ -29,12 +29,12 @@
     color: blueviolet;
 }
 .bannerimg{
-    width: 300px;
+    width: 520px;
 }
 .banner-container{
 display: flex;
 justify-content: space-around;
-height: 100vh;
+height: 90vh;
 color: white;
 /* border: 2px solid gray; */
 align-items: center;
@@ -81,12 +81,13 @@ background-size: cover;
 .box{
     width: 230px;
     height: 280px;
-    box-shadow: 4px 4px 15px gray;
-    background-color: black;
+    box-shadow: 4px 4px 25px gray;
+    background-color: rgb(0, 0, 0);
     text-align: center;
     padding: 15px;
     color: white;
     border-radius: 10px;
+    margin-bottom: 100px;
 }
 .icon{
     width: 70px;
@@ -106,6 +107,39 @@ background-size: cover;
     display: flex;
     justify-content: space-around;
     padding: 20px;
-    background-color:black ;
+    background-color:rgb(0, 0, 0) ;
     box-shadow: 20px;
 }
+
+
+.Contact{
+    height: 40vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-image: url(/BuonMinimalistWall_DarkDesktop.jpg);
+    background-position: center;
+    background-size: cover;
+    color: aliceblue;
+   
+}
+.logo1{
+    width: 120px;
+}
+.list-item{
+    list-style: none;
+    
+}
+.copyright{
+    color: red;
+    background-color: black;
+    text-align: center;
+    padding: 50px;
+
+}
+hr {
+    width:50%;
+    margin:0 auto;
+    }
+
+
