--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ background-size: cover;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-image: url(/BuonMinimalistWall_DarkDesktop.jpg);
+    background-image: url(./BuonMinimalistWall_DarkDesktop.jpg);
     background-position: center;
     background-size: cover;
     color: aliceblue;
