--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ height: 90vh;
 color: white;
 /* border: 2px solid gray; */
 align-items: center;
-background-image: url("/images/background.png"),
+background-image: url("./images/background.png"),
 linear-gradient(45deg,rgba(8, 8, 8),rgba(53, 53, 53));
 background-position: center;
 background-repeat: no-repeat;
